Project-001-Roman-Numerals-Converter/convert-roman-cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  Roman Numerals Converter Application (Python Flask) deployed 
  on AWS EC2 with Cloudformation and AWS CLI


Parameters:
  KeyPair:
    Description: Select your keypair.
    Type: AWS::EC2::KeyPair::KeyName

    
Resources:
  CFNInstanceConvertRoman:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-05fa00d4c63e32376
      InstanceType: t2.micro
      KeyName: !Ref KeyPair
      SecurityGroups:
        - !Ref CFNConvertRomanSecGroup   #my-sec-group (hazır ec2 consolda var olan)
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData:
       Fn::Base64: !Sub | # or  !Base64 |
          #!/bin/bash
          yum update -y
          pip3 install flask
          yum install git -y 
          cd /home/ec2-user
          git clone https://github.com/usuladams/my_roman_project.git
          cd
          cd /home/ec2-user/my_roman_project/
          python3 app.py
  
  CFNConvertRomanSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH for CFN Instance # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      
Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt CFNInstanceConvertRoman.PublicDnsName #or !GetAtt CFNInstanceConvertRoman.PublicIp
    Description: Roman Numerals Converter Application Website URL
